--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2003-12-26  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/imagemap/imap_cern.y
+	* plug-ins/imagemap/imap_cern_lex.c
+	* plug-ins/imagemap/imap_cern_parse.[ch]
+	* plug-ins/imagemap/imap_csim.[ly]
+	* plug-ins/imagemap/imap_csim_lex.c
+	* plug-ins/imagemap/imap_csim_parse.[ch]
+	* plug-ins/imagemap/imap_ncsa.[ly]
+	* plug-ins/imagemap/imap_ncsa_lex.c	
+	* plug-ins/imagemap/imap_ncsa_parse.[ch]: Yosh informed me that
+	regenerating the files using recent versions of flex/bison is a
+	bad idea. Reverted my changes and redid the most important parts
+	manually.
+
+2003-12-26  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpdisplayconfig.c: set the default value for
 	"activate-on-focus" to TRUE. The discussion on this has been
 	controversial and I am doing this change now in order to get more
