--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-26  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/edge.c: forgot to change
+	gimp_pixel_fetcher_set_edgemode to gimp_pixel_fetcher_set_edge_mode
+	here.
+
+2003-12-26  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/imagemap/imap_cern.y
 	* plug-ins/imagemap/imap_cern_lex.c
 	* plug-ins/imagemap/imap_cern_parse.[ch]
