--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-26  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimagefile.c (gimp_imagefile_save_thumb): don't crash
+	when layer previews are disabled.
+
 2003-12-26  Dave Neary  <bolsh@gimp.org>
 
 	* app/base/levels.c: Modify behaviour of levels tool to 
