Added the relevant bug number to the Changelog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11853 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003-12-27  Simon Budig  <simon@gimp.org>
 
 	Dashed stroking is here...  :-)
+	(fixes bug #129597, although further improvements are desireable)
 
 	* app/core/gimpdrawable-stroke.c: actually use the dash pattern
 	from the options
