2003-12-27  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpdasheditor.c: some minor cleanups.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11854 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-27  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpdasheditor.c: some minor cleanups.
+
 2003-12-27  Simon Budig  <simon@gimp.org>
 
 	Dashed stroking is here...  :-)
