2003-12-28  Simon Budig  <simon@gimp.org>
	* app/widgets/gimpdasheditor.[ch]: Added functions to shift the
	dash pattern to the left or right.

	* app/widgets/gimpstrokeeditor.c: Improve the appearance of the
	widget and add left/right buttons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11855 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-28  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/gimpdasheditor.[ch]: Added functions to shift the
+	dash pattern to the left or right.
+	
+	* app/widgets/gimpstrokeeditor.c: Improve the appearance of the
+	widget and add left/right buttons.
+
 2003-12-27  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpdasheditor.c: some minor cleanups.
