--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-28  Valek Filippov  <frob@d.ru>
+
+	* Updated russian translation from Anatoly (Doc) Yakushin.
+
 2003-12-24  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
