2003-12-28  Simon Budig  <simon@gimp.org>
	* app/widgets/gimpstrokeeditor.c: Fixed packing of the widgets.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11857 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-28  Simon Budig  <simon@gimp.org>
 
+	* app/widgets/gimpstrokeeditor.c: Fixed packing of the widgets.
+
+2003-12-28  Simon Budig  <simon@gimp.org>
+
 	* app/widgets/gimpdasheditor.[ch]: Added functions to shift the
 	dash pattern to the left or right.
 	
