2003-12-28  Simon Budig  <simon@gimp.org>
	* app/core/core-enums.h: Some default dash pattern enum.
	* app/core/core-enums.c: regenerated.

	* app/core/gimpstrokeoptions.[ch]: Implement default dash
	patterns, add a signal when the dash pattern changes.

	* app/widgets/gimpstrokeeditor.c: Add an option menu for
	the dash pattern and connect it to the signal mentioned above.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11858 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2003-12-28  Simon Budig  <simon@gimp.org>
 
+	* app/core/core-enums.h: Some default dash pattern enum.
+	* app/core/core-enums.c: regenerated.
+
+	* app/core/gimpstrokeoptions.[ch]: Implement default dash
+	patterns, add a signal when the dash pattern changes.
+
+	* app/widgets/gimpstrokeeditor.c: Add an option menu for
+	the dash pattern and connect it to the signal mentioned above.
+
+2003-12-28  Simon Budig  <simon@gimp.org>
+
 	* app/widgets/gimpstrokeeditor.c: Fixed packing of the widgets.
 
 2003-12-28  Simon Budig  <simon@gimp.org>
