2003-12-29  RaphaÃ«l Quinet  <quinet@gamers.org>
	* app/gui/palette-editor-menu.c: Applied patch by David Gowers
	(neota@softhome.net) improving the mnemonics of the palette editor
	commands 'New from FG/BG'.  Fixes bug #130121.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11861 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-29  Raphaël Quinet  <quinet@gamers.org>
+
+	* app/gui/palette-editor-menu.c: Applied patch by David Gowers
+	(neota@softhome.net) improving the mnemonics of the palette editor
+	commands 'New from FG/BG'.  Fixes bug #130121.
+
 2003-12-29  Simon Budig  <simon@gimp.org>
 
 	* app/gui/about-dialog.c: Redone to have a fancy graphical
