2003-12-29  Duarte Loreto <happyguy_pt@hotmail.com>
	* pt.po: Updated Portuguese translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11863 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-29  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2003-12-28  Valek Filippov  <frob@d.ru>
 
 	* Updated russian translation from Anatoly (Doc) Yakushin.
