--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-30  Simon Budig  <simon@gimp.org>
+
+	* app/gui/stroke-dialog.c: Save the stroking type (libart /
+	paint-tool) so that it can be remembered when the dialog
+	gets opened a second time. Fixes Bug #128156.
+
 2003-12-29  Simon Budig  <simon@gimp.org>
 
 	* app/gui/about-dialog.c: reshuffle the authors array and
