2003-12-30  Simon Budig  <simon@gimp.org>
	* app/vectors/gimpvectors-compat.c: When there is a visible
	path, it cannot be stored in the XCF in a portable manner.

	* app/xcf/xcf-save.c: Removed Debug output


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11865 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-30  Simon Budig  <simon@gimp.org>
 
+	* app/vectors/gimpvectors-compat.c: When there is a visible
+	path, it cannot be stored in the XCF in a portable manner.
+
+	* app/xcf/xcf-save.c: Removed Debug output
+
+2003-12-30  Simon Budig  <simon@gimp.org>
+
 	* app/gui/stroke-dialog.c: Save the stroking type (libart /
 	paint-tool) so that it can be remembered when the dialog
 	gets opened a second time. Fixes Bug #128156.
