2003-12-30  Simon Budig  <simon@gimp.org>
	* app/gui/about-dialog.c: Made it possible to have multiple
	lines of translators in the about dialog. Simply translate
	"<Translators: insert your names here, separated by newline>".

	Fixes bug #58507.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11866 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-12-30  Simon Budig  <simon@gimp.org>
 
+	* app/gui/about-dialog.c: Made it possible to have multiple
+	lines of translators in the about dialog. Simply translate
+	"<Translators: insert your names here, separated by newline>".
+
+	Fixes bug #58507.
+
+2003-12-30  Simon Budig  <simon@gimp.org>
+
 	* app/vectors/gimpvectors-compat.c: When there is a visible
 	path, it cannot be stored in the XCF in a portable manner.
 
