--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-30  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-12-30  Paul Duffy <dubhthach@compsoc.nuigalway.ie>
 
         * ga.po: Updated Irish translation
