2003-12-30  Simon Budig  <simon@gimp.org>
	* app/tools/gimpvectortool.c: Do not move anchors in edit mode.

	Fixes bug #124973.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11869 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-30  Simon Budig  <simon@gimp.org>
 
+	* app/tools/gimpvectortool.c: Do not move anchors in edit mode.
+
+	Fixes bug #124973.
+
+2003-12-30  Simon Budig  <simon@gimp.org>
+
 	* app/gui/about-dialog.c: Made it possible to have multiple
 	lines of translators in the about dialog. Simply translate
 	"<Translators: insert your names here, separated by newline>".
