2003-12-31  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptextoptions.c (gimp_text_options_gui): fixed
	table packing.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11870 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-31  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptextoptions.c (gimp_text_options_gui): fixed
+	table packing.
+
 2003-12-30  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpvectortool.c: Do not move anchors in edit mode.
