Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11876 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-01  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2003-12-30  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
